--- a/about-us.html
+++ b/about-us.html
@@ -264,7 +264,7 @@
         <section class="write">
             <div class="container">
                 <div class="write__body">
-                    <div class="write__title title">О нас пишут</div>
+                    <h3 class="write__title title">О нас пишут</h3>
                     <div class="write__box">
                         <img src="img/about-us/write/Forbes.png" alt="">
                         <img src="img/about-us/write/РБК.png" alt="">
@@ -314,11 +314,11 @@
                 </div>
                 <div class="footer-flex__email email-footer">
                     <div class="email-footer__item">
-                       <div class="email-footer__title">Сотрудничество</div>
+                       <h3 class="email-footer__title">Сотрудничество</h3>
                        <a class="email-footer__link" href="mailto:@youmiwork">@youmiwork</a>
                     </div>
                     <div class="email-footer__item">
-                        <div class="email-footer__title">Поддержка клиентов</div>
+                        <h3 class="email-footer__title">Поддержка клиентов</h3>
                         <a class="email-footer__link" href="mailto:@youmi">@youmi</a>
                     </div>
                 </div>
@@ -332,11 +332,11 @@
                         <li class="nav-footer__item"><a href="contacts.html" class="nav-footer__link" target="_blank">Контакты</a></li>
                     </ul>
                 </nav>
-                <d class="footer-flex__documentation documentation-footer">
+                <div class="footer-flex__documentation documentation-footer">
                     <a href="#" class="documentation-footer__link">Обработка персональных данных</a>
                     <a href="#" class="documentation-footer__link">Пользовательское соглашение</a>
                     <a href="#" class="documentation-footer__link">Юридические документы</a>
-                </d>
+                </div>
             </div>
         </div>
     </footer>
