--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@
                     <div class="step__wrapper">
                         <div class="step__row row-step">
                             <article class="row-step__content">
-                                <div class="row-step__title">Заполните анкету,</div>
-                                <div class="row-step__text text">ответив на 5 простых вопросов, определив тему и пожелания по психологу.</div>
+                                <h3 class="row-step__title">Заполните анкету,</h3>
+                                <p class="row-step__text text">ответив на 5 простых вопросов, определив тему и пожелания по психологу.</p>
                                 <picture>
                                     <source srcset="img/home-page/step/one-mini.png" media="(max-width:480px)">
                                     <img src="img/home-page/step/one.png" alt="" class="row-step__number">
@@ -234,8 +234,8 @@
                                 <img src="img/home-page/step/profile.png" alt="">
                             </div>
                             <article class="row-step__content">
-                                <div class="row-step__title">Ознакомьтесь с профилями</div>
-                                <div class="row-step__text text">специалистов и посмотрите видео-визитки. Выберите психолога с которым вам будет комфортно.</div>
+                                <h3 class="row-step__title">Ознакомьтесь с профилями</h3>
+                                <p class="row-step__text text">специалистов и посмотрите видео-визитки. Выберите психолога с которым вам будет комфортно.</p>
                                 <picture>
                                     <source srcset="img/home-page/step/two-mini.png" media="(max-width:480px)">
                                     <img src="img/home-page/step/two.png" alt="" class="row-step__number">
@@ -245,8 +245,8 @@
                         </div>
                         <div class="step__row row-step">
                             <article class="row-step__content">
-                                <div class="row-step__title">Определите дату и время</div>
-                                <div class="row-step__text text">первой сессии. Если у вас поменяются планы, вы сможете ее отменить или перенести.</div>
+                                <h3 class="row-step__title">Определите дату и время</h3>
+                                <p class="row-step__text text">первой сессии. Если у вас поменяются планы, вы сможете ее отменить или перенести.</p>
                                 <picture>
                                     <source srcset="img/home-page/step/three-mini.png" media="(max-width:480px)">
                                     <img src="img/home-page/step/three.png" alt="" class="row-step__number">
@@ -261,8 +261,8 @@
                                 <img src="img/home-page/step/text.png" alt="">
                             </div>
                             <article class="row-step__content">
-                                <div class="row-step__title">Пройдите тестирование</div>
-                                <div class="row-step__text text">в личном кабинете для того, чтобы сделать первую сессию более продуктивной.</div>
+                                <h3 class="row-step__title">Пройдите тестирование</h3>
+                                <p class="row-step__text text">в личном кабинете для того, чтобы сделать первую сессию более продуктивной.</p>
                                 <picture>
                                     <source srcset="img/home-page/step/for-mini.png" media="(max-width:480px)">
                                     <img src="img/home-page/step/for.png" alt="" class="row-step__number">
@@ -292,8 +292,8 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_1 open"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_1 open">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_1 open">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
                         <div class="ask__item item-ask item-ask_2 ">
                             <div class="item-ask__top">
@@ -302,8 +302,8 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_2"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_2">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_2">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
 
                          <div class="ask__item item-ask item-ask_3 ">
@@ -314,8 +314,8 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_3"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_3">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_3">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
 
                          <div class="ask__item item-ask item-ask_4 ">
@@ -325,8 +325,8 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_4"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_4">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_4">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
 
                          <div class="ask__item item-ask item-ask_5 ">
@@ -336,8 +336,8 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_5"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_5">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_5">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
 
                          <div class="ask__item item-ask item-ask_6 ">
@@ -347,21 +347,9 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_6"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_6">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_6">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
-
-
-
-
-
-
-
-
-
-
-
-                        
                     </div>
                     <button class="ask__button button">Больше вопросов</button>
                 </div>
@@ -435,11 +423,11 @@
                 </div>
                 <div class="footer-flex__email email-footer">
                     <div class="email-footer__item">
-                       <div class="email-footer__title">Сотрудничество</div>
+                       <h3 class="email-footer__title">Сотрудничество</h3>
                        <a class="email-footer__link" href="mailto:@youmiwork">@youmiwork</a>
                     </div>
                     <div class="email-footer__item">
-                        <div class="email-footer__title">Поддержка клиентов</div>
+                        <h3 class="email-footer__title">Поддержка клиентов</h3>
                         <a class="email-footer__link" href="mailto:@youmi">@youmi</a>
                     </div>
                 </div>
@@ -453,11 +441,11 @@
                         <li class="nav-footer__item"><a href="contacts.html" class="nav-footer__link" target="_blank">Контакты</a></li>
                     </ul>
                 </nav>
-                <d class="footer-flex__documentation documentation-footer">
+                <div class="footer-flex__documentation documentation-footer">
                     <a href="#" class="documentation-footer__link">Обработка персональных данных</a>
                     <a href="#" class="documentation-footer__link">Пользовательское соглашение</a>
                     <a href="#" class="documentation-footer__link">Юридические документы</a>
-                </d>
+                </div>
             </div>
         </div>
     </footer>
