--- a/psychologists.html
+++ b/psychologists.html
@@ -92,7 +92,7 @@
         <section class="wait">
             <div class="container">
                 <div class="wait__body">
-                    <div class="wait__title title">Ждем от вас</div>
+                    <h3 class="wait__title title">Ждем от вас</h3>
                     <div class="wait__grid grid-wait">
                         <article class="grid-wait__item">
                             <img src="img/psychologists/wait/book.png" alt="">
@@ -203,8 +203,8 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_1 open"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_1 open">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_1 open">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
                         <div class="ask__item item-ask item-ask_2 ">
                             <div class="item-ask__top">
@@ -213,8 +213,8 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_2"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_2">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_2">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
 
                          <div class="ask__item item-ask item-ask_3 ">
@@ -224,8 +224,8 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_3"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_3">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_3">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
 
                          <div class="ask__item item-ask item-ask_4 ">
@@ -235,8 +235,8 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_4"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_4">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_4">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
 
                          <div class="ask__item item-ask item-ask_5 ">
@@ -246,8 +246,8 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_5"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_5">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_5">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
 
                          <div class="ask__item item-ask item-ask_6 ">
@@ -257,8 +257,8 @@
                                 </article>
                                 <div class="item-ask__icon item-ask__icon_6"></div>
                             </div>
-                            <div class="item-ask__text text item-ask__text_6">Да, эффективно и уже является стандартной практикой во всем мире. 
-                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</div>
+                            <p class="item-ask__text text item-ask__text_6">Да, эффективно и уже является стандартной практикой во всем мире. 
+                                За последние годы было проведено много научных исследований, доказывающих, что данный формат не уступает по эффективности традиционной очной психотерапии.</p>
                          </div>
                     </div>
                     <button class="ask__button button">Ещё</button>
