--- a/rates.html
+++ b/rates.html
@@ -349,11 +349,11 @@
                         <li class="nav-footer__item"><a href="contacts.html" class="nav-footer__link" target="_blank">Контакты</a></li>
                     </ul>
                 </nav>
-                <d class="footer-flex__documentation documentation-footer">
+                <div class="footer-flex__documentation documentation-footer">
                     <a href="#" class="documentation-footer__link">Обработка персональных данных</a>
                     <a href="#" class="documentation-footer__link">Пользовательское соглашение</a>
                     <a href="#" class="documentation-footer__link">Юридические документы</a>
-                </d>
+                </div>
             </div>
         </div>
     </footer>
