--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,107 @@
     <title>Contacts</title>
 </head>
 <body>
-    
+    <header class="header" id="header-white">
+        <div class="container">
+            <div class="header__body">
+                <a href="index.html" class="header__logo"><img src="img/header/logo.svg" alt=""></a>
+                <nav class="header__menu menu">
+                    <div class="menu__wrapper">
+                        <ul class="menu__list">
+                            <li class="menu__item"><a href="about-us.html" class="menu__link" target="_blank">О нас</a></li>
+                            <li class="menu__item"><a href="rates.html" class="menu__link" target="_blank">Тарифы</a></li>
+                            <li class="menu__item"><a href="psychologists.html" class="menu__link" target="_blank">Психологам</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link" target="_blank">Материалы</a></li>
+                        </ul>
+                        <button class="menu__button">Личный кабинет</button>
+                    </div>
+                    <div class="menu__burger">
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="contacts">
+            <div class="container">
+                <div class="contacts__body">
+                    <div class="contacts__box">
+                        <img src="img/contacts/call.png" alt="call">
+                        <h3 class="contacts__title title">Контакты</h3>
+                    </div>
+                    <div class="contacts__grid grid-contacts">
+                        <article class="grid-contacts__item">
+                            <h3 class="grid-contacts__title">Поддержка клиентов</h3>
+                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
+                        </article>
+                        <article class="grid-contacts__item">
+                            <h3 class="grid-contacts__title">Для предложений</h3>
+                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
+                        </article>
+                        <article class="grid-contacts__item">
+                            <h3 class="grid-contacts__title">Сотрудничество со СМИ</h3>
+                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
+                        </article>
+                        <article class="grid-contacts__item">
+                            <h3 class="grid-contacts__title">Сотрудничество с психологами</h3>
+                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
+                        </article>
+                        <article class="grid-contacts__item">
+                            <h3 class="grid-contacts__title">Сотрудничество с блоггерами</h3>
+                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
+                        </article>
+                        <article class="grid-contacts__item">
+                            <h3 class="grid-contacts__title">Работа в YouMi</h3>
+                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__body footer-flex">
+                <div class="footer-flex__wrapper">
+                    <a class="footer-flex__logo" href="index.html">
+                        <img src="img/footer/logo.png" alt="logo" >
+                     </a>
+                    <div data-da=".footer-flex, 768, 3" class="footer-flex__social" >
+                        <a href="https://vk.com/"><img src="img/footer/vk.png" alt="vk"></a>
+                        <a href="https://web.telegram.org/k/"><img src="img/footer/telegram.png" alt="telegram"></a>
+                        <a href="https://dzen.ru/"><img src="img/footer/dzen.png" alt="dzen"></a>
+                    </div>
+                </div>
+                <div class="footer-flex__email email-footer">
+                    <div class="email-footer__item">
+                       <div class="email-footer__title">Сотрудничество</div>
+                       <a class="email-footer__link" href="mailto:@youmiwork">@youmiwork</a>
+                    </div>
+                    <div class="email-footer__item">
+                        <div class="email-footer__title">Поддержка клиентов</div>
+                        <a class="email-footer__link" href="mailto:@youmi">@youmi</a>
+                    </div>
+                </div>
+                <nav class="footer-flex__nav nav-footer">
+                    <ul class="nav-footer__list">
+                        <li class="nav-footer__item"><a href="about-us.html" class="nav-footer__link" target="_blank">О нас</a></li>
+                        <li class="nav-footer__item"><a href="#" class="nav-footer__link" target="_blank">Блог</a></li>
+                        <li class="nav-footer__item"><a href="rates.html" class="nav-footer__link" target="_blank">Тарифы</a></li>
+                        <li class="nav-footer__item"><a href="#" class="nav-footer__link" target="_blank">Вопрос-ответ</a></li>
+                        <li class="nav-footer__item"><a href="psychologists.html" class="nav-footer__link" target="_blank">Психологам</a></li>
+                        <li class="nav-footer__item"><a href="contacts.html" class="nav-footer__link" target="_blank">Контакты</a></li>
+                    </ul>
+                </nav>
+                <d class="footer-flex__documentation documentation-footer">
+                    <a href="#" class="documentation-footer__link">Обработка персональных данных</a>
+                    <a href="#" class="documentation-footer__link">Пользовательское соглашение</a>
+                    <a href="#" class="documentation-footer__link">Юридические документы</a>
+                </d>
+            </div>
+        </div>
+    </footer>
+
      <script src="js/jquery.js"></script>
      <script src="js/slick.min.js"></script>
      <script type="module" src="./js/app.js"></script>
