--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <header class="header purple">
         <div class="container">
             <div class="header__body">
-                <a href="index.html" class="header__logo"><img src="img/header/logo.svg" alt=""></a>
+                <a href="index.html" class="header__logo"><img src="img/header/logo.svg" alt="logo"></a>
                 <nav class="header__menu menu">
                     <div class="menu__wrapper">
                         <ul class="menu__list">
                             <li class="menu__item"><a href="about-us.html" class="menu__link" target="_blank">О нас</a></li>
                             <li class="menu__item"><a href="rates.html" class="menu__link" target="_blank">Тарифы</a></li>
                             <li class="menu__item"><a href="psychologists.html" class="menu__link" target="_blank">Психологам</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link" target="_blank">Материалы</a></li>
+                            <li class="menu__item"><a href="new-year.html" class="menu__link" target="_blank">Материалы</a></li>
                         </ul>
                         <button class="menu__button">Личный кабинет</button>
                     </div>
