--- a/new-year.html
+++ b/new-year.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/contacts.css">
+    <link rel="stylesheet" href="css/new-year.css">
     <link rel="stylesheet" href="css/footer.css">
-    <title>Contacts</title>
+    <title>new-year</title>
 </head>
 <body>
     <header class="header" id="header-white">
@@ -21,7 +21,7 @@
                             <li class="menu__item"><a href="about-us.html" class="menu__link" target="_blank">О нас</a></li>
                             <li class="menu__item"><a href="rates.html" class="menu__link" target="_blank">Тарифы</a></li>
                             <li class="menu__item"><a href="psychologists.html" class="menu__link" target="_blank">Психологам</a></li>
-                            <li class="menu__item"><a href="new-year.html" class="menu__link" target="_blank">Материалы</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link" target="_blank">Материалы</a></li>
                         </ul>
                         <button class="menu__button">Личный кабинет</button>
                     </div>
@@ -32,43 +32,80 @@
         </div>
     </header>
     <main class="main">
-        <section class="contacts">
+        <section class="new-year">
             <div class="container">
-                <div class="contacts__body">
-                    <div class="contacts__box">
-                        <img src="img/contacts/call.png" alt="call">
-                        <h3 class="contacts__title title">Контакты</h3>
-                    </div>
-                    <div class="contacts__grid grid-contacts">
-                        <article class="grid-contacts__item">
-                            <h3 class="grid-contacts__title">Поддержка клиентов</h3>
-                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
-                        </article>
-                        <article class="grid-contacts__item">
-                            <h3 class="grid-contacts__title">Для предложений</h3>
-                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
-                        </article>
-                        <article class="grid-contacts__item">
-                            <h3 class="grid-contacts__title">Сотрудничество со СМИ</h3>
-                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
-                        </article>
-                        <article class="grid-contacts__item">
-                            <h3 class="grid-contacts__title">Сотрудничество с психологами</h3>
-                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
-                        </article>
-                        <article class="grid-contacts__item">
-                            <h3 class="grid-contacts__title">Сотрудничество с блоггерами</h3>
-                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
-                        </article>
-                        <article class="grid-contacts__item">
-                            <h3 class="grid-contacts__title">Работа в YouMi</h3>
-                            <p class="grid-contacts__text">+ 7 916 635 83 31</p>
-                        </article>
-                    </div>
+                <div class="new-year__body">
+                    <div class="new-year__title">Эту страницу верстать не нужно, поэтому всех с 2023 годом!</div>
+                </div>
+               <img src="img/new-year/toys-1.png" alt="" class="new-year__toys-1">
+                <img src="img/new-year/toys-2.png" alt="" class="new-year__toys-2"> 
+            </div>
+            <div class="new-year__slider slider-big">
+                <div class="slider-big__item ibg">
+                    <img src="img/new-year/item01.jpg" alt="">
+                </div>
+                <div class="slider-big__item ibg">
+                    <img src="img/new-year/item02.jpg" alt="">
+                </div>
+                <div class="slider-big__item ibg">
+                    <img src="img/new-year/item03.jpg" alt="">
+                </div>
+                <div class="slider-big__item ibg">
+                    <img src="img/new-year/item04.jpg" alt="">
+                </div>
+                <div class="slider-big__item ibg">
+                    <img src="img/new-year/item05.jpg" alt="">
+                </div>
+                <div class="slider-big__item ibg">
+                    <img src="img/new-year/item06.jpg" alt="">
+                </div>
+                <div class="slider-big__item ibg">
+                    <img src="img/new-year/item07.jpg" alt="">
+                </div>
+                <div class="slider-big__item ibg">
+                    <img src="img/new-year/item08.jpg" alt="">
+                </div>
+                <div class="slider-big__item ibg">
+                    <img src="img/new-year/item09.jpg" alt="">
+                </div>
+                <div class="slider-big__item ibg">
+                    <img src="img/new-year/item10.jpg" alt="">
                 </div>
             </div>
+            <div class="new-year__slider slider-year">
+                <div class="slider-year__item ibg">
+                    <img src="img/new-year/item01.jpg" alt="">
+                </div>
+                <div class="slider-year__item ibg">
+                    <img src="img/new-year/item02.jpg" alt="">
+                </div>
+                <div class="slider-year__item ibg">
+                    <img src="img/new-year/item03.jpg" alt="">
+                </div>
+                <div class="slider-year__item ibg">
+                    <img src="img/new-year/item04.jpg" alt="">
+                </div>
+                <div class="slider-year__item ibg">
+                    <img src="img/new-year/item05.jpg" alt="">
+                </div>
+                <div class="slider-year__item ibg">
+                    <img src="img/new-year/item06.jpg" alt="">
+                </div>
+                <div class="slider-year__item ibg">
+                    <img src="img/new-year/item07.jpg" alt="">
+                </div>
+                <div class="slider-year__item ibg">
+                    <img src="img/new-year/item08.jpg" alt="">
+                </div>
+                <div class="slider-year__item ibg">
+                    <img src="img/new-year/item09.jpg" alt="">
+                </div>
+                <div class="slider-year__item ibg">
+                    <img src="img/new-year/item10.jpg" alt="">
+                </div>
+            </div>
+            
         </section>
-        
     </main>
     <footer class="footer">
         <div class="container">
