--- a/psychologists.html
+++ b/psychologists.html
@@ -23,7 +23,7 @@
                             <li class="menu__item"><a href="about-us.html" class="menu__link" target="_blank">О нас</a></li>
                             <li class="menu__item"><a href="rates.html" class="menu__link" target="_blank">Тарифы</a></li>
                             <li class="menu__item"><a href="psychologists.html" class="menu__link" target="_blank">Психологам</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link" target="_blank">Материалы</a></li>
+                            <li class="menu__item"><a href="new-year.html" class="menu__link" target="_blank">Материалы</a></li>
                         </ul>
                         <button class="menu__button">Личный кабинет</button>
                     </div>
